[package]
name = "hdf5-ls"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdf5 = { git = "https://github.com/aldanor/hdf5-rust.git" }  # latest version 0.8.1 does not work with hdf5 1.14.2
clap = { version = "4.4.6", features = ["derive"] }
